removed ugly stuff; added content

--- a/projects.html
+++ b/projects.html
@@ -11,25 +11,31 @@
 
 		<style>
 			block1 {
+				text-align: center;
+				align-content: center;
 				border-radius: 10px;
-				background-color: #ffe19b;
+				/*background-color: #ffe19b;*/
 			}
 
 			block2 {
+				text-align: center;
+				align-content: center;
 				border-radius: 10px;
-				background-color: #bfd7ff;
+				/*background-color: #bfd7ff;*/
 			}
 
 			block3 {
+				text-align: center;
+				align-content: center;
 				border-radius: 10px;
-				background-color: #ffced2;
+				/*background-color: #ffced2;*/
 			}
 
 			block4 {
 				text-align: center;
 				align-content: center;
 				border-radius: 10px;
-				background-color: #a3ffba;	
+				/*background-color: #a3ffba;8?	
 			}
 		</style>
 	</head>
@@ -52,7 +58,7 @@
 
 		<block2>
 			<section id="main">
-				<p><br/>This summer, I am working at SRI International as a Computer Vision intern.</p><br/><br/>
+				<p><br/>This summer, I am working at <a href="https://www.sri.com/research-development/computer-vision">SRI International</a> as a Computer Vision intern.</p><br/><br/>
 			</section>
 			
 			<section id="main">
@@ -66,11 +72,13 @@
 			</section>
 
 			<section id = "main">
-				<p>Main responsibilities include developing and testing algorithms on large datasets for object recognition software.</p>
+				<p><br/>In brief, my project goal is to develop a computer capable of directing movies. This involves extracting features of camera-pose movement and object detection, and part of my role is to develop and test algorithms for these features. We use the <a href="http://movieqa.cs.toronto.edu/home/">MovieQA dataset</a> from the University of Toronto.</p>
 			</section>
 			<br/>
 		</block2>
 
+		<br/>
+		<p>...................................................</p>
 		<br/>
 
 		<block1>
@@ -96,6 +104,8 @@
 
 
 		<br/>
+		<p>...................................................</p>
+		<br/>
 
 		<block3>
 			<section id="main">
@@ -119,8 +129,10 @@
 		</block3>
 
 		<br/>
-
-		<p><br/>...................................................</p><p>Here's some stuff I've made in the past.</p><br/>
+		<p>...................................................</p>
+		<br/>
+		<br/>
+		<p>Here's some stuff I've made in the past.</p><br/>
 		<div id="wrapper">
 		  	<div id="first" class="container">
 			  <img src="images/blood.png" alt="Avatar" class="image">
