--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 			</section>
 
 			<section id = "main">
-				<p><br/>In brief, my project goal is to develop a computer capable of directing movies. This involves extracting features of camera-pose movement and object detection, and part of my role is to develop and test algorithms for these features. We use the <a href="http://movieqa.cs.toronto.edu/home/">MovieQA dataset</a> from the University of Toronto.</p>
+				<p><br/>My project is part of a larger goal of developing a computer capable of directing movies. My role is to develop and test algorithms for monocular camera tracking using ROS and Python. We use the <a href="http://movieqa.cs.toronto.edu/home/">MovieQA dataset</a> from the University of Toronto.</p>
 			</section>
 			<br/>
 		</block2>
