revamped projects page; need new page for job experience

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</section>
 
 			<ul>
-				<a href="projects.html"><button class="button"><span>cs</span></button></a>
+				<a href="projects2.html"><button class="button"><span>cs</span></button></a>
 				<a href="hobbies.html"><button class="button"><span>non-cs</span></button></a>
 			</ul>
 
