--- a/projects.html
+++ b/projects.html
@@ -8,36 +8,6 @@
 		<!-- Add icon library -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-
-		<style>
-			block1 {
-				text-align: center;
-				align-content: center;
-				border-radius: 10px;
-				/*background-color: #ffe19b;*/
-			}
-
-			block2 {
-				text-align: center;
-				align-content: center;
-				border-radius: 10px;
-				/*background-color: #bfd7ff;*/
-			}
-
-			block3 {
-				text-align: center;
-				align-content: center;
-				border-radius: 10px;
-				/*background-color: #ffced2;*/
-			}
-
-			block4 {
-				text-align: center;
-				align-content: center;
-				border-radius: 10px;
-				/*background-color: #a3ffba;8?	
-			}
-		</style>
 	</head>
 
 	<body>
@@ -151,7 +121,7 @@
 		  	<div id="third" class="container">
 			  <img src="images/magafood.png" alt="Avatar" class="image">
 			  <div class="overlay">
-			    <div class="text">Visual Yelp <br/><p class="small">an Android application that uses the Yelp and Google Maps APIs to deliver food pictures of every restaurant queried by the user.<br/></p><button id="magafood">More info</button></div>
+			    <div class="text">Visual Yelp <br/><p class="small">Android application using Yelp and Google Maps APIs to deliver food pictures of restaurant food.<br/></p><button id="magafood">More info</button></div>
 			  </div>
 			</div>
 		</div>
@@ -171,7 +141,7 @@
   			<!-- Modal content -->
 			  <div class="modal-content">
 			    <span class="close">&times;</span>
-			    <p></p>
+			    <p>Coming soon!</p>
 			  </div>
 		</div>
 
@@ -180,7 +150,7 @@
   			<!-- Modal content -->
 			  <div class="modal-content">
 			    <span class="close">&times;</span>
-			    <p></p>
+			    <p>User can search for restaurants based on cuisine type (e.g. "Chinese", "Mexican", etc.) or food type (e.g. "dessert", "lunch", "tacos", etc.). <br/>Restaurant-specific food pictures were obtained with Yelp API calls, while location-based restaurants were obtained with Google Maps API calls.<img src="images/magaapp.png" alt="Avatar" class="image"></p>
 			  </div>
 		</div>
 
@@ -225,7 +195,7 @@
 		</script>
 		<script>
 			// Get the modal
-			var modal = document.getElementById('cellid');
+			var modal = document.getElementById('cellidm');
 
 			// Get the button that opens the modal
 			var btn = document.getElementById("cellid");
