updated projects page; added careers page but not shown for now

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			</section>
 
 			<ul>
-				<a href="projects2.html"><button class="button"><span>cs</span></button></a>
-				<a href="hobbies.html"><button class="button"><span>non-cs</span></button></a>
+				<a href="projects2.html"><button class="button"><span><p>cs</p></span></button></a>
+				<a href="hobbies.html"><button class="button"><span>¬cs</span></button></a>
 			</ul>
 
 			<!--
