--- a/projects2.html
+++ b/projects2.html
@@ -9,6 +9,61 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 		<style>
+			html {
+			  box-sizing: border-box;
+			}
+
+			*, *:before, *:after {
+			  box-sizing: inherit;
+			}
+
+			.column {
+			  float: left;
+			  width: 33.3%;
+			  margin-bottom: 16px;
+			  padding: 0 8px;
+			}
+
+			@media (max-width: 650px) {
+			  .column {
+			    width: 100%;
+			    display: block;
+			  }
+			}
+
+			.card {
+			  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+			}
+
+			.container {
+			  padding: 0 16px;
+			}
+
+			.container::after, .row::after {
+			  content: "";
+			  clear: both;
+			  display: table;
+			}
+
+			.title {
+			  color: grey;
+			}
+
+			.button {
+			  border: none;
+			  outline: 0;
+			  display: inline-block;
+			  padding: 8px;
+			  color: white;
+			  background-color: #000;
+			  text-align: center;
+			  cursor: pointer;
+			  width: 100%;
+			}
+
+			.button:hover {
+			  background-color: #555;
+			}
 		</style>
 	</head>
 
@@ -20,10 +75,9 @@
 					<h1 class="thick">Computer Science.</h1>
 					<p>Many hours are spent here.</p>
 					<p>For more details, (git) checkout my Github!</p>
-					<a href="http://github.com/jz359" class="fa fa-linkedin"></a>
+					<a href="https://www.linkedin.com/in/jz359/" class="fa fa-linkedin"></a>
 					<a href="http://github.com/jz359" class="fa fa-github"></a>
 				</div>
-				<!--<h1 id="logo"><a href="index.html">Andy Zhang</a></h1>-->
 			</header>
 		</section>
 
