update website with minimal effort

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Andy Zhang's Website</title>
+		<title>Andy Zhang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,9 +27,11 @@
 				<header>
 					<div id="circle">
 						<a href="index.html"><img src="images/me.png" class="curve"></a>
-						<h1 class="thick">Hello!</h1>
-						<p>Glad you found my website.</p>
-						<p>If you're looking for my resume, click <a href="assets/resume.pdf">here</a>.<br/>Otherwise, feel free to explore more about me.</p>
+						<h1 class="thick">Hi, I'm Andy!</h1>
+						<p>Resume <a href="assets/resume.pdf">here</a>.
+							<br/>
+							Cornell CS & ECE, c/o 2020.
+						</p>
 						<a href="http://linkedin.com/in/jz359" class="fa fa-linkedin"></a>
 						<a href="http://github.com/jz359" class="fa fa-github"></a>
 					</div>
@@ -37,38 +39,60 @@
 				</header>
 			</section>
 
+		<br/>
 			<section id="main">
-				<p><br/><br/>I'm an undergrad at Cornell University studying Computer Science and Electrical Engineering.<br/>My favorite topics include machine vision/learning, signal processing, and computational theory.<br/><br/>My life can be divided into CS and non-CS things.<br/><br/><br/></p>
-			</section>
+				<p>
+					Broadly interested in geodistributed systems and software-defined networks.
+					<br/><br/>
+				</p>
 
 			<ul>
-				<a href="projects2.html"><button class="button"><span><p>cs</p></span></button></a>
-				<a href="hobbies.html"><button class="button"><span>¬cs</span></button></a>
+				<a href="projects.html"><button class="button"><span><p>projects</p></span></button></a>
+				<!-- <a href="hobbies.html"><button class="button"><span>play</span></button></a> -->
 			</ul>
-
-			<!--
-			<section id="hobbies">
-				<div id="hobby">
-					<h1>Basketball<br/><br/></h1>
-					<p>Always up for a game of pickup. Avid follower of the NBA.<br/></p>
-				</div>
-
-				<div id="hobby">
-					<h1>Hiking<br/><br/></h1>
-					<p>Nature is nice.<br/></p>
-				</div>
-
-				<div id="hobby">
-					<h1>Reading<br/><br/></h1>
-					<p>Good books only.<br/></p>
-				</div>
-
-				<div id="hobby">
-					<h1>Drawing<br/><br/></h1>
-					<p>Typical shy doodler.<br/></p>
-				</div>
 			</section>
-			-->
+
+			<div class="pproj">
+				<div class="boxjob">
+				  <img src="./images/googlecloud.png" alt="Avatar" style="width:70px">
+				  <a href="https://cloud.google.com/"><span>Google</span></a>
+				  <p> June 2020 - present
+				  	//
+				  	Software Engineer @ Google Cloud, Search
+				  </p>
+				 </div>
+			</div>
+			<div class="pproj">
+				<div class="boxjob">
+				  <img src="./images/googlecloud.png" alt="Avatar" style="width:70px">
+				  <a href="https://www.google.com"><span>Google</span></a>
+				  <p>Summer 2019
+				  	//
+				  	Software Engineering Intern @ Google Cloud, Jobs API
+				  </p>
+				 </div>
+			</div>
+			<div class="pproj">
+				<div class="boxjob">
+				  <img src="./images/googleplay.png" alt="Avatar" style="width:70px">
+				  <a href="https://play.google.com/store"><span>Google</span></a>
+				  <p>Summer 2018
+				  	//
+				  	Software Engineering Intern @ Google Play, Infrastructure
+				  </p>
+				 </div>
+			</div>
+			<div class="pproj">
+				<div class="boxjob">
+				  <img src="./images/sri.png" alt="Avatar" style="width:70px">
+				  <a href="https://www.sri.com"><span>SRI International</span></a>
+				  <p>Summer 2017
+				  	// 
+				  	Computer Vision Intern @ R&D
+				  </p>
+				 </div>
+			</div>
+			<br/>
 		<footer>
 		<p> </p>
 		</footer>
