--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 			<header>
 				<div id="circle">
 					<a href="index.html"><img src="images/me.png" class="curve"></a>
-					<h1 class="thick">Computer Science.</h1>
+					<h1 class="thick">CS Projects.</h1>
 					<p>Many hours are spent here.</p>
 					<p>For more details, check out my Github!</p>
 					<a href="https://www.linkedin.com/in/jz359/" class="fa fa-linkedin"></a>
